Time: 25 ms (91.12%), Space: 58.3 MB (80.45%) - LeetHub